# nodes

./: CMakeLists.txt  LICENCE.md  MIT  README.md  notes.md
assets/: example.conf
include/: enviroment.hxx  gui.hxx  lexer.hxx  node.hxx  parser.hxx  scene.hxx  tokenizer.hxx  uuid.hxx
include/widget/: base.hxx  context_menu.hxx  label.hxx
src/: enviroment.cxx  gui.cxx  lexer.cxx  main.cxx  node.cxx  parser.cxx  scene.cxx  tokenizer.cxx  uuid.cxx
src/widget/: base.cxx  context_menu.cxx  label.cxx
